--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset='UTF-8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="/static/css/navbar-fixed-top.css" rel="stylesheet">
     <link href="/static/css/jquery.jqplot.min.css" rel="stylesheet">
@@ -9,8 +11,6 @@
     <script src="/static/js/excanvas.min.js"></script>
 <!--
 -->
-    <meta charset='UTF-8'>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     {% if title %}
     <title>{{ title }}</title>
@@ -19,10 +19,9 @@
     {% endif %}
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <!-- Static navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
@@ -46,9 +45,7 @@
             </ul>
 {% endif %}
           </div><!--/.nav-collapse -->
-        </div><!--/.container -->
       </nav>
-    </div>
 
 <!-- end menu description -->
 
@@ -63,7 +60,6 @@
     {% endif %}
     {% endwith %}
 
-<div class="container">
 {% block content %}{% endblock %}
 </div>
 
