--- a/app/templates/postmessage.html
+++ b/app/templates/postmessage.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="container">
+<div class="row">
 <p>Кратко сформулируйте тему вашего обращения, которую необходимо указать в заголовке. Само обращение можно разместить в поле &quot;Сообщение&quot;, если его длина не превышает
 2200 символов. Так же вы можете сопроводить своё обращение дополнительными материалами, записанными в zip-архив. Не забудьте представиться и заполнить поля &quot;Email&quot; и/или
 &quot;Телефон&quot;, чтобы ответственный сотрудник мог связаться с вами для уточнения деталей. 
@@ -12,16 +12,17 @@
 т.к. с помощью него вы сможете идентифицировать обратившегося к вам сотрудника.
 </p>
 </div>
-<div class="container">
+
+<div class="row">
   <form action="" method="post" name="message" role="form" class="form-horizontal" enctype=multipart/form-data>
     {{form.hidden_tag()}}
     <div class=form-group">
       <label class="control-label col-lg-2" for="title">Заголовок:</label>
       <div class="col-lg-10"> {{form.title(autofocus=true, maxlength=140, class="form-control", placeholder="Введите заголовок сообщения")}} </div>
       <label class="control-label col-lg-2" for="email">Email:</label>
-      <div class="col-lg-10"> {{form.email(maxlength=100, class="form-control", placeholder="Укажите адрес электронной почты")}} </div>
+      <div class="col-lg-10"> {{form.email(maxlength=100, type="email", class="form-control", placeholder="Укажите адрес электронной почты")}} </div>
       <label class="control-label col-lg-2" for="telephone">Телефон:</label>
-      <div class="col-lg-10"> {{form.telephone(maxlength=20, class="form-control", placeholder="Укажите номер телефона цифрами")}} </div>
+      <div class="col-lg-10"> {{form.telephone(maxlength=20, type="tel", class="form-control", placeholder="Укажите номер телефона цифрами")}} </div>
       <label class="control-label col-lg-2" for="message">Сообщение:</label>
       <div class="col-lg-12"> {{form.message(maxlength=2200, rows=10, class="form-control", placeholder="Введите сообщение длинной не более 2200 символов")}} </div>
       <label class="control-label col-lg-2" for="archive">Файл:</label>
