--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,9 +6,6 @@
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="/static/css/navbar-fixed-top.css" rel="stylesheet">
     <link href="/static/css/jquery.jqplot.min.css" rel="stylesheet">
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/excanvas.min.js"></script>
 <!--
 -->
 
@@ -60,8 +57,17 @@
     {% endif %}
     {% endwith %}
 
-{% block content %}{% endblock %}
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/excanvas.min.js"></script>
+
+    {% block content %}{% endblock %}
 </div>
+<footer class="bs-docs-footer" role="contentinfo">
+  <div class="container">
+    <p class="text-center">АКБ Банк (с)</p>
+  </div>
+</footer>
 
   </body>
 </html>
