--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,12 +2,10 @@
 <html>
   <head>
     <meta charset='UTF-8'>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/static/css/navbar-fixed-top.css" rel="stylesheet">
-    <link href="/static/css/jquery.jqplot.min.css" rel="stylesheet">
-<!--
--->
+    <link href="/static/css/navbar.css" rel="stylesheet">
 
     {% if title %}
     <title>{{ title }}</title>
@@ -18,7 +16,7 @@
   <body>
     <div class="container-fluid">
       <!-- Static navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
@@ -59,7 +57,6 @@
 
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/excanvas.min.js"></script>
 
     {% block content %}{% endblock %}
 </div>
