--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/static/css/navbar.css" rel="stylesheet">
+    <link href="/static/css/sticky-footer-navbar.css" rel="stylesheet">
 
     {% if title %}
     <title>{{ title }}</title>
@@ -14,9 +14,9 @@
     {% endif %}
   </head>
   <body>
-    <div class="container-fluid">
       <!-- Static navbar -->
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
@@ -40,10 +40,12 @@
             </ul>
 {% endif %}
           </div><!--/.nav-collapse -->
+        </div> <!-- container -->
       </nav>
 
 <!-- end menu description -->
 
+<div class="container">
     {% with messages = get_flashed_messages() %}
     {% if messages %}
     {% for message in messages %}
@@ -55,12 +57,14 @@
     {% endif %}
     {% endwith %}
 
+</div> <!-- container -->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
 
+<div class="container">
     {% block content %}{% endblock %}
-</div>
-<footer class="bs-docs-footer" role="contentinfo">
+</div> <!-- container fluid -->
+<footer class="footer">
   <div class="container">
     <p class="text-center">АКБ Банк (с)</p>
   </div>
