--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,35 +1,46 @@
-<!-- extend from base layout -->
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='UTF-8'>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/static/css/signin.css" rel="stylesheet">
 
-{% block content %}
+    {% if title %}
+    <title>{{ title }}</title>
+    {% else %}
+    <title>No TITLE BUG!</title>
+    {% endif %}
+  </head>
+  <body>
 
-
-  <form method=post class="form-horizontal" role="form">
-    <div class=form-group">
-      <label class="control-label col-lg-2" for="username">Имя:</label>
-      <div class="col-lg-10"> {{form.username(autofocus=true, maxlength=15, class="form-control")}} </div>
-    </div>
-    <div class=form-group">
-      <label class="control-label col-lg-2" for="password">Пароль:</label>
-      <div class="col-lg-10"> {{form.password(maxlength=20, class="form-control")}} </div>
-    </div>
-    <div class=form-group">
-      <div class="col-lg-offset-2 col-lg-10">
-        <button type="submit" class="btn btn-sm btn-primary" value="Login">Вход</button> 
-      </div>
-    </div>
-    {{form.hidden_tag()}}
-  </form>
+<div class="container-fluid">
     {% with messages = get_flashed_messages() %}
     {% if messages %}
-    <ul>
     {% for message in messages %}
-        <li>{{ message }} </li>
+        <div class="alert alert-warning">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+               {{ message }}
+        </div>
     {% endfor %}
-    </ul>
     {% endif %}
     {% endwith %}
 
+</div> <!-- container fluid -->
+    <div class="container">
 
-{% endblock %}
+      <form action="" method="post" name="login" class="form-signin" role="form">
+        {{form.username(autofocus=true, requered=True, maxlength=15, class="form-control", placeholder="Введите имя")}} 
+        {{form.password(maxlength=20, class="form-control", requred=True, placeholder="Введите пароль")}}
+        <button class="btn btn-lg btn-primary btn-block" type="submit" value="Login">Войти</button>
+    {{form.hidden_tag()}}
+      </form>
 
+    </div> <!-- /container -->
+
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+
+  </body>
+</html>
