--- a/app/templates/admin/useredit.html
+++ b/app/templates/admin/useredit.html
@@ -1,22 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
 
-  <div class="row">
-    <div class="col-xs-12">
-<form action="" method="post" name="useredit">
+<div class="row">
+<form action="" method="post" name="useredit" role="form" class="form-horizontal">
     {{form.hidden_tag()}}
-
-    <div class="col-xs-4">
-	<table class="table">
-	<tr><td>Username:</td><td>{{form.username}}</td></tr>
-	<tr><td>Password:</td><td>{{form.password}}</td></tr>
-	<tr><td>Email:</td><td>{{form.email}}</td></tr>
-	<tr><td>Timezone:</td><td>{{form.timezone}}</td></tr>
-	<tr><td>Role:</td><td>{{form.role}}</td></tr>
-	</table>
-        {{form.apply_button}} {{form.cancel_button}}
+    <label class="control-label col-lg-2" for="password">Пароль:</label>
+    <div class="col-lg-10"> {{form.password(class="form-control")}} </div>
+    <label class="control-label col-lg-2" for="email">Почта:</label>
+    <div class="col-lg-10"> {{form.email(class="form-control")}} </div>
+    <label class="control-label col-lg-2" for="role">Роль:</label>
+    <div class="col-lg-10"> {{form.role(class="form-control")}} </div>
+    <div class="col-lg-offset-2 col-lg-4">
+      {{form.apply_button(class="btn btn-lg btn-primary form-control")}}
+      {{form.cancel_button(class="btn btn-lg btn-primary form-control")}}
     </div>
 
 </form>
-</div></div>
+</div>
 {% endblock %}
+
