--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -31,8 +31,8 @@
     <div class="container">
 
       <form action="" method="post" name="login" class="form-signin" role="form">
-        {{form.username(autofocus=true, requered=True, maxlength=15, class="form-control", placeholder="Введите имя")}} 
-        {{form.password(maxlength=20, class="form-control", requred=True, placeholder="Введите пароль")}}
+        {{form.username(autofocus=true, requered=True, class="form-control", placeholder="Введите имя")}} 
+        {{form.password(class="form-control", requred=True, placeholder="Введите пароль")}}
         <button class="btn btn-lg btn-primary btn-block" type="submit" value="Login">Войти</button>
     {{form.hidden_tag()}}
       </form>
