--- a/app/templates/admin/useradd.html
+++ b/app/templates/admin/useradd.html
@@ -4,17 +4,17 @@
 <div class="row">
   <form action="" method="post" name="useradd" class="form-horizontal" role="form">
     {{form.hidden_tag()}}
-    <label class="control-label col-lg-2" for="userid">Идентификатор:</label>
+    {{form.userid.label(class="control-label col-lg-2")}}
     <div class="col-lg-10"> {{form.userid(class="form-control")}} </div>
-    <label class="control-label col-lg-2" for="first">Имя:</label>
+    {{form.first.label(class="control-label col-lg-2")}}
     <div class="col-lg-10"> {{form.first(class="form-control")}} </div>
-    <label class="control-label col-lg-2" for="last">Фамилия:</label>
+    {{form.last.label(class="control-label col-lg-2")}}
     <div class="col-lg-10"> {{form.last(class="form-control")}} </div>
-    <label class="control-label col-lg-2" for="password">Пароль:</label>
+    {{form.password.label(class="control-label col-lg-2")}}
     <div class="col-lg-10"> {{form.password(class="form-control")}} </div>
-    <label class="control-label col-lg-2" for="email">Почта:</label>
+    {{form.email.label(class="control-label col-lg-2")}}
     <div class="col-lg-10"> {{form.email(class="form-control")}} </div>
-    <label class="control-label col-lg-2" for="role">Роль:</label>
+    {{form.role.label(class="control-label col-lg-2")}}
     <div class="col-lg-10"> {{form.role(class="form-control")}} </div>
     <div class="col-lg-offset-2 col-lg-4">
       {{form.apply_button(class="btn btn-lg btn-primary form-control")}}
@@ -24,3 +24,4 @@
 </div>
 {% endblock %}
 
+    <div class="col-lg-10"> {{form.email(class="form-control")}} </div>
