--- a/app/templates/admin/useredit.html
+++ b/app/templates/admin/useredit.html
@@ -4,11 +4,11 @@
 <div class="row">
 <form action="" method="post" name="useredit" role="form" class="form-horizontal">
     {{form.hidden_tag()}}
-    <label class="control-label col-lg-2" for="password">Пароль:</label>
+    {{form.password.label(class="control-label col-lg-2")}}
     <div class="col-lg-10"> {{form.password(class="form-control")}} </div>
-    <label class="control-label col-lg-2" for="email">Почта:</label>
+    {{form.email.label(class="control-label col-lg-2")}}
     <div class="col-lg-10"> {{form.email(class="form-control")}} </div>
-    <label class="control-label col-lg-2" for="role">Роль:</label>
+    {{form.role.label(class="control-label col-lg-2")}}
     <div class="col-lg-10"> {{form.role(class="form-control")}} </div>
     <div class="col-lg-offset-2 col-lg-4">
       {{form.apply_button(class="btn btn-lg btn-primary form-control")}}
