--- a/app/templates/postmessage.html
+++ b/app/templates/postmessage.html
@@ -6,8 +6,10 @@
 <div class="row">
   <div class="col-lg-12">
     <p>Кратко сформулируйте тему вашего обращения, которую необходимо указать в заголовке. Само обращение можно разместить в поле &quot;Сообщение&quot;, если его длина не превышает
-       2200 символов. Так же вы можете сопроводить своё обращение дополнительными материалами, записанными в zip-архив. Не забудьте представиться и заполнить поля &quot;Email&quot; и/или
-       &quot;Телефон&quot;, чтобы ответственный сотрудник мог связаться с вами для уточнения деталей. 
+       4500 символов. Так же вы можете сопроводить своё обращение дополнительными материалами, записанными в zip-архив, максимальный размер которого не должен превышать 16 мегабайт).
+       Не забудьте представиться и заполнить поля {{form.email.label}} и/или {{form.telephone.label}}, чтобы ответственный сотрудник мог связаться с вами для уточнения деталей. Шаблон для 
+       заполнения поля {{form.email.label}} <i>username@company.ru</i>, шаблон для заполнения поля {{form.telephone.label}}
+       <i>&lt;код страны&gt;(код города/оператора связи)номер телефона#дополнительный номер</i>.
     </p>
     <p>Обратите внимание, что после нажатия на кнопку &quot;Отправить&quot;, вы перейдёте на страницу с отображением номера вашего сообщения. Пожалуйста, запомните или запишите этот номер,
        т.к. с помощью него вы сможете идентифицировать обратившегося к вам сотрудника.
